infra/kubernetes/app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-name
  namespace: application
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: deploy-name
  template:
    metadata:
      labels:
        app: deploy-name
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: deploy-name
        image: deploy-name
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
        ports:
        - containerPort: 5000
          name: deploy-port
        volumeMounts:
        - name:  config
          mountPath: "/app/.env"
          subPath: .env
          readOnly: true
      imagePullSecrets:
      - name: jfrogregistrykey
      volumes:
      - name:  config
        secret:
          secretName: deploy-name-env
