infra/kubernetes/app/account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
  namespace: application
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: account
        image: epershinaass2.jfrog.io/account-docker/account:sha-31642b9
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
          limits:
            memory: 200Mi
            cpu: 500m
        ports:
        - containerPort: 5000
          name: ac-port
        volumeMounts:
        - name:  config
          mountPath: "/app/.env"
          subPath: .env
          readOnly: true
      imagePullSecrets:
      - name: jfrogregistrykey
      volumes:
      - name:  config
        secret:
          secretName: account-env
---
apiVersion: v1
kind: Service
metadata:
  name: account
  namespace: application
spec:
  selector:
    app: account
  clusterIP: None
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: ac-svc-port
    protocol: TCP
    port: 5002
    targetPort: ac-port
