infra/kubernetes/app/balance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance
  namespace: application
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: balance
  template:
    metadata:
      labels:
        app: balance
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: balance
        image: epershinaass2.jfrog.io/balance-docker/balance:pr-154
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
          limits:
            memory: 200Mi
            cpu: 500m
        ports:
        - containerPort: 5000
          name: bl-port
        volumeMounts:
        - name:  config
          mountPath: "/app/.env"
          subPath: .env
          readOnly: true
      imagePullSecrets:
      - name: jfrogregistrykey
      volumes:
      - name:  config
        secret:
          secretName: balance-env
---
apiVersion: v1
kind: Service
metadata:
  name: balance
  namespace: application
spec:
  selector:
    app: balance
  clusterIP: None
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: bl-svc-port
    protocol: TCP
    port: 5000
    targetPort: bl-port
