infra/kubernetes/app/facade.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facade
  namespace: application
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: facade
  template:
    metadata:
      labels:
        app: facade
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: facade
        image: epershinaass2.jfrog.io/facade-docker/facade:sha-fafa8ba
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
          limits:
            memory: 200Mi
            cpu: 500m
        ports:
        - containerPort: 3000
          name: fs-port
        volumeMounts:
        - name:  config
          mountPath: "/app/.env"
          subPath: .env
          readOnly: true
      imagePullSecrets:
      - name: jfrogregistrykey
      volumes:
      - name:  config
        secret:
          secretName: facade-env
---
apiVersion: v1
kind: Service
metadata:
  name: facade
  namespace: application
spec:
  selector:
    app: facade
  clusterIP: None
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: fs-svc-port
    protocol: TCP
    port: 3000
    targetPort: fs-port
